--- a/views/elements/header.ejs
+++ b/views/elements/header.ejs
@@ -6,6 +6,7 @@
 
     <title>Home</title>
 
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Space+Mono&family=Square+Peg&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/style/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
